--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,11 +1,58 @@
-.hero{
+@use "./styles" as s;
 
-  &__img{
-    
+.hero{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 65px;
+
+  &__background-img{
+    position: absolute;
+    z-index: -1;
+    left: 500px;
+  }
+
+  &__ellipse{
+    position: absolute;
+    bottom: -361px;
+    right: 104px;
+    z-index: -1;
   }
 }
 
-.hero-container{
+.hero__left-side{
   display: flex;
-  gap: 16px;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 18px;
+
+  &__text{
+    &--large{
+      @include s.body($weight:700,$font-size:125px);
+    }
+    &--change{
+
+    }
+    &--small{
+      @include s.body($weight:700,$font-size:83px)
+    }
+    &--accent{
+      font-style: italic;
+      color: s.$primary;
+    }
+  }
+
+  &__button-wrapper{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
+}
+
+.hero__right-side{
+
+  &__img{
+    width: 787px;
+  }
 }
