--- a/main.scss
+++ b/main.scss
@@ -6,6 +6,7 @@
 @use './scss/nav';
 @use './scss/how-it-works';
 @use './scss/features';
+@use './scss/pricing';
 
 body{
   font-family: 'Inter', sans-serif;
